# templater

./: Cargo.toml  README.md
src/: builder.rs  err.rs  formatter.rs  lib.rs  templater.rs
tests/: integration_tests.rs
tests/common/: mod.rs
