[package]
name = "string-template"
description = "Simple string templating language on struct fields"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ryanYtan/templater"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "tests/*"
]

[dependencies]
thiserror = "1.0.40"
unicode-segmentation = "1.10.1"
